--- a/style.css
+++ b/style.css
@@ -374,7 +374,7 @@
       margin: 3% 2%;
       align-self: flex-start;
 
-
+      max-height: 650px;
       font-family: Arial, Helvetica, sans-serif;
       font-style: normal;
       font-weight: 400;
@@ -382,9 +382,8 @@
       line-height: 150%;
       display: none;
       text-align: block;
-      margin-top: 3%;
       overflow-y: auto;
-      max-width: 900px;
+      
       word-wrap: break-word;
 
   }
