--- a/style.css
+++ b/style.css
@@ -3,106 +3,124 @@
     padding: 0;
   }
 
-  body{
-       height: 1024px;
-       width: 1440px;
-       background-color: #E5E5E5;
-  }
+html{
+    height: 100%;
+}
 
-  header {
+body{
+    height: 100%;
+    background-color: #E5E5E5;
+    font-family: Inter, sans-serif;
+    font-weight: 400;
+    letter-spacing: 0em;
+}
+
+header {
     width: 70%;
     height: 10%;
+    display: flex;
     align-items: flex-start;
-  }
+}
 
-  .switch {
-     position: absolute;
-    left: 870px;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-    margin-top: 2%;
-  }
+.switchconte{
+  position: relative;
+  width: auto;
+  height: 100%;
+  align-items: center;
+}
 
-  /*################## Ocultar el checkbox #################*/
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    transition: .4s;
-    border-radius: 50%;
-  }
+.switch {
+  position: relative;
+  display: inline-block;
+  align-self: right;
+  align-items: center;
+  width: 4.1666666666667vw;
+  height: 2.3611111111111vw;
+  margin-top: 50%;
+  margin-left: 5%;
+}
 
-  .switchLabel {
-       position: relative;
-       top: 90%;
-       left: -17px;
-       display: flex;
-       color: black;
-       font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-       white-space: nowrap;
-       text-align: center;
-  }
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
 
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 50%;
+}
 
-  .slider:before {
-       position: absolute;
-       content: "";
-       height: 26px;
-       width: 26px;
-       left: 4px;
-       bottom: 4px;
-       background-color: white;
-       transition: .4s;
-       border-radius: 50%;
-  }
+.switchLabel {
+  position: relative;
+  display: flex;
+  color: black;
+  font-size: 1vw;
+  margin-left: -9%;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  white-space: nowrap;
+  text-align: center;
+  align-self: center;
+}
 
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 2.3vw;
+  width: 2.3vw;
+  left: 0.12vw;
+  bottom: 0.12vw;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
 
-  input:checked + .slider {
-       background-color: #2196F3;
-  }
+input:checked + .slider {
+  background-color: #2196F3;
+}
 
+input:checked + .slider:before {
+  transform: translateX(1.8vw);
+}
 
-  input:checked + .slider:before {
-       transform: translateX(26px);
-  }
+.slider.round {
+  border-radius: 5.5555555555556vw;
+}
 
-
-  .slider.round {
-    border-radius: 34px;
-  }
-
-  .slider.round:before {
-     border-radius: 50%;
-  }
+.slider.round:before {
+  border-radius: 50%;
+}
 
 
 /*######################################## Logo header */
 
   .logo {
-    width: 100%;
-    float: left;
+    position: relative;
+    display: flex;
+    width: 80%;
+    height: 100%;
+    align-items: flex-start;
   }
 
   .logo img {
-       margin: 2% 0 1% 3%;
-       float: inherit;
+    position: relative;
+    height: 5vw;
+    padding: 2% 0 1% 3%;
   }
 
   .logo h1 {
-     float: inherit;
+    flex: 1;
+    display: inline-block;
     margin-left: 9%;
     margin-top: 2.5%;
-    font-size: 40px;
+    font-size: 4vw;
     font-style: normal;
     font-family: Arial, Helvetica, sans-serif;
     color: rgba(39, 39, 39, 0.911);
@@ -110,8 +128,9 @@
 
 
   .contenedor {
+    position: absolute;
      width: 100%;
-    height: 84%; 
+    height: 75%; 
     display: flex;
 
   } 
@@ -120,21 +139,23 @@
   .izquierda {
        flex: 70%;
        position: relative;
-       height: 100%;
+       height: auto;
   }
 
 
   .textoinput {
-
-      width: 100%;
+    position: relative;
+    width: 96%;
      height: 70%;
+
+     padding: 4% 0 0 4%;
 
   }
 
   #textoNuevo {
-   width: 90%;
-    height: 90%;
-   margin: 1% 4% ;
+    position: relative;
+      width: 90%;
+      height: 90%;
    border: none;
    outline: none;                
    background-color: transparent;
@@ -142,7 +163,7 @@
    font-family: 'Inter';
    font-style: normal;
    font-weight: 400;                 
-   font-size: 32px;
+   font-size: 2.6vw;
    line-height: 150%;
    align-self: flex-start;
   }
@@ -155,6 +176,7 @@
 
 
   .botones {
+    position: relative;
     display: flex;
 
     align-items: center;
@@ -199,15 +221,15 @@
 
   #botonencrip {
 
-      display: inline-block;
-      width: 328px;
-      height: 67px;
-      gap: 8px;
-      margin-left: 15%;
+    display: inline-block;
+     width: 22.778vw;
+     height: 4.653vw;
+     gap: 0.556vw;
+    margin-left: 15%;
 
       color: white;
 
-      font-size: 20px;
+      font-size: 1.389vw;
 
       font-family: Arial, Helvetica, sans-serif;
 
@@ -226,11 +248,11 @@
 
       display: inline-block;
 
-      width: 328px;
+      width: 22.778vw;
 
-      height: 67px;
+      height: 4.653vw;
 
-      gap: 8px;
+      gap: 0.556vw;
 
       margin-left: 5%;
 
@@ -242,7 +264,7 @@
 
       color: #0A3871;
 
-      font-size: 20px;
+      font-size: 1.389vw;
 
       font-family: Arial, Helvetica, sans-serif;
 
@@ -258,130 +280,113 @@
     flex: 30%;
     height: 100%;
     overflow: visible;
-
   }
-
-  #botonCopiar {
-      width: 90%;
-      position: absolute;
-      bottom: 4%;
-      align-self: center;
-      box-sizing: border-box;
-      flex-direction: row;
-      align-items: center;
-      padding: 24px;
-      gap: 8px;
-      width: 336px;
-      height: 67px;
-
-      border: 1px solid #0A3871;
-      border-radius: 24px;
-      color: black;
-  }
-
-  #botonCopiar:hover,#botonencrip:hover,#botondesencrip:hover {
-
-      border: 2px solid #061e3b;
-
-      transform: scale(1.03);
-
-      cursor: pointer;
-  }
-
-  .rectangulo1 {
-      position: relative;
-      display: flex;
-      flex-direction: column; /* Alinear elementos verticalmente */
-      align-items: center; /* Centrar elementos horizontalmente */
-      justify-content: center; /* Centrar elementos verticalmente */
-      width: 90%; 
-      height: 800px;
-      margin-top: -15%;
-      background: #FFFFFF;
-      box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
-      border-radius: 32px;
-      overflow: hidden;
-  }
-
-
-  .munheco {
-   position: relative;
-
-  }
-
-
-  .rectangulo1 h1 {
-      width: auto;
-      position: relative;
-      align-self: center;
-      font-size: 24px;
-      font-family: 'Inter';
-      font-style: normal;
-      font-weight: 700;
-      line-height: 120%;
-      color: #343A40;
-  }
-
-
-  .rectangulo1 p {
-      width: auto;
-      position: relative;
-      align-self: center;
-      font-family: 'Inter';
-      font-style: normal;
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 150%;
-      color: #495057;
-      order: 1;
-  }
-
-
-  #mensaje-copiado {
-
-      position: fixed;
-
-      bottom: 10%;
-
-      left: 50%;
-
-      transform: translateX(-50%);
-
-      padding: 10px;
-
-      font-family: Arial, Helvetica, sans-serif;
-
-      font-style: bold;
-
-      background-color: rgba(0, 42, 133, 0.548);
-
-      border: 1px solid #fffefe;
-
-      border-radius: 24px;
-
-      z-index: 9999;
-
-      display: none;
-
-  }
-
   
+  #botonCopiar {
+    width: 27vw;
+    position: absolute;
+    bottom: 4%;
+    margin: 0 2vw;
+    align-self: center;
+    box-sizing: border-box;
+    flex-direction: row;
+    align-items: center;
+    padding: 1.667vw;
 
+    width: 22.778vw;
+    height: 4.653vw;
+    gap: 0.556vw;
+    border: 1px solid #0A3871;
+    border-radius: 24px;
+    color: black;
+  }
+  
+  #botonCopiar:hover, #botonencrip:hover, #botondesencrip:hover {
+    border: 2px solid #061e3b;
+    transform: scale(1.03);
+    cursor: pointer;
+  }
+  
+  .rectangulo1 {
+    position: absolute;
+    align-self: stretch; /* Cambiado de "center" a "stretch" */
+    flex-direction: column; /* Alinear elementos verticalmente */
+    align-items: center; /* Centrar elementos horizontalmente */
+    justify-content: center; /* Centrar elementos verticalmente */
+    width: 27vw;
+    height: 100%;
+    padding: 5% 0;
+    margin-top: -4%;
+    background: #FFFFFF;
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+    border-radius: 32px;
+    overflow: hidden;
+  }
+  
+  .munheco {
+    position: relative;
+    max-width: 100%;
+    width: auto;
+    height: auto;
+    align-self: stretch;
+    text-align: center;
+  }
+  
+  .rectangulo1 h1 {
+    width: 100%;
+    position: relative;
+    text-align: center;
+    font-size: 2vw; /* Cambiado de "1.8vw" a "4vw" */
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+    color: #343A40;
+  }
+  
+  .rectangulo1 p {
+    width: 100%;
+    position: relative;
+    text-align: center;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1vw; /* Cambiado de "0.8vw" a "2.667vw" */
+    line-height: 150%;
+    color: #495057;
+    order: 1;
+  }
+  
+  #mensaje-copiado {
+    position: fixed;
+    bottom: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: bold;
+    background-color: rgba(0, 42, 133, 0.548);
+    border: 1px solid #fffefe;
+    border-radius: 24px;
+    z-index: 9999;
+    display: none;
+  }
+  
   #textoReemplazado {
 
       position: absolute;
       top: 3%;
-      margin: 3% 2%;
-      align-self: flex-start;
-
-      max-height: 650px;
+      margin: 3% 3%;
+      align-self: center;
+      max-width: 22vw;
+      max-height: 60%;
       font-family: Arial, Helvetica, sans-serif;
       font-style: normal;
       font-weight: 400;
-      font-size: 16px;
+      font-size: 1.5vw;
       line-height: 150%;
       display: none;
-      text-align: block;
+      text-align: justify;
       overflow-y: auto;
       
       word-wrap: break-word;
@@ -390,38 +395,42 @@
 
   /* #############Pie de página############## */
   footer {
-      position: relative;
+      position: absolute;
+      bottom: 0;
 
-      width: 100%;
+      width: 70%;
 
       height: 6%;
 
-      margin: 0;
+      margin: 1% 0 0 0;
 
-      margin-top: -1%;
+      margin-top: 4%;
 
       padding: 0;
 
       text-align: center;
-
+      display: flex;
       align-items: center;
+      justify-content: center;
 
   }
   .pie{
-      position: relative;
-      margin-top: 2%;
+      position: absolute;
+      width: 100%;
+      margin-bottom: 2%;
       font-family: Arial, Helvetica, sans-serif;
   }
   .corazon {
 
-      position: relative;
+      position: absolute;
 
       width: 100%;
+      max-width:fit-content;
 
       height: 10%;
 
-      margin-top: -4%;
-      align-self: auto;
+      margin: 0 50%;
+      align-self: center;
 
       transform: scale(30%);
 
@@ -435,5 +444,48 @@
       100% {
           transform: rotateY(360deg) scale(2.0);
       }
+
+  }
+
+
+  @media screen and (max-width:768px){
+    .contenedor {
+      position: absolute;
+      width: 100%;
+      height: 75%;
+      display: flex;
+      flex-direction: column;
+    }
+    
+    .izquierda {
+      flex: 1;
+      position: relative;
+      width: 100%;
+    }
+    
+    .derecha {
+      flex:1;
+      width: 100%;
+      overflow: visible;
+    }
+
+    .rectangulo1 {
+      position: absolute;
+      align-self: stretch; /* Cambiado de "center" a "stretch" */
+      flex-direction: column; /* Alinear elementos verticalmente */
+      align-items: center; /* Centrar elementos horizontalmente */
+      justify-content: center; /* Centrar elementos verticalmente */
+      width: 100%;
+      height: 100%;
+      padding: 5% 0;
+      background: #FFFFFF;
+      box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+      border-radius: 32px;
+      overflow: hidden;
+    }
+
+    
+    
+  
 
   }
