--- a/style.css
+++ b/style.css
@@ -448,45 +448,131 @@ input:checked + .slider:before {
 
   }
 
+  /*###### diferentes medidas */
 
+  /*tables*/
   @media screen and (max-width:768px){
+
+
+
+    .switchconte{
+      position: absolute;
+      margin-top: -6%;
+      padding: 1%;
+      right: 2vw;
+    }
+
+    .switchLabel{
+      font-size: 2vw;
+      left: -3.5vw;
+    }
+
     .contenedor {
       position: absolute;
       width: 100%;
-      height: 75%;
+      height: 80%;
       display: flex;
       flex-direction: column;
+      margin-top: 0%;
     }
-    
+
     .izquierda {
-      flex: 1;
+      flex: 70%;
+    }
+
+    .textoinput {
       position: relative;
-      width: 100%;
-    }
-    
-    .derecha {
-      flex:1;
-      width: 100%;
-      overflow: visible;
+      width: 94%;
+      margin: 0;
+      padding: 3%;
+      height: 58%;
+  
     }
 
-    .rectangulo1 {
-      position: absolute;
-      align-self: stretch; /* Cambiado de "center" a "stretch" */
-      flex-direction: column; /* Alinear elementos verticalmente */
-      align-items: center; /* Centrar elementos horizontalmente */
-      justify-content: center; /* Centrar elementos verticalmente */
-      width: 100%;
-      height: 100%;
-      padding: 5% 0;
-      background: #FFFFFF;
-      box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
-      border-radius: 32px;
-      overflow: hidden;
+
+    .munheco{
+      display: none;
+    }
+  
+    #textoNuevo {
+      position: relative;
+        width: 100%;
+        height: 90%;
+        background-color: #fffefe;
+     border: 7px #061e3b;  
+     border-radius: 24px; 
+     padding: 3% 0 0 1%;            
     }
 
-    
-    
+    .botones{
+      margin-top: 3%;
+      width: 100%;
+      height: 35%;
+    }
   
 
+    .derecha {
+      flex: 30%;
+  
+    }
+
+    .mensajeinfo{
+      align-self: center;
+      font-size: 3vw;
+      margin-left: 4%;
+    }
+
+    #botonencrip {
+       width: 40vw;
+       height: 8vw;
+       gap: 0.556vw;
+       margin-left: 4%;
+
+   }
+
+   #botondesencrip {
+    width: 40vw;
+       height: 8vw;
+       gap: 0.556vw;
+
+   }
+
+   .resultados{
+    position: relative;
+    width: 94%;
+    height: 100%;
+    padding: 1%  3% 0 3%;
+
+   }
+
+    .rectangulo1 {
+      position: relative;
+      align-items: center;
+    
+     width: 100%;
+     height: 100%;
+     padding: 0;
+     margin-top: 0;
+    }
+
+
+    #botonCopiar{
+     width: 35vw;
+     height: 8vw;
+     align-self: center;
+     margin-left: 31%;
+
+
+    }
+
+
+    footer{
+     width: 100%;
+   }
+
+  } 
+
+  /*######### celular##################*/
+  @media screen and (max-width:375px) {
+  
   }
